...
                android:text="username/email:"
                android:textColor="#111111"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginIdentifierInput"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_box_outline"
                android:gravity="center_vertical"
                android:hint=""
...
                android:text="password:"
                android:textColor="#111111"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_box_outline"
                android:gravity="center_vertical"
                android:hint=""
...
                android:textColor="#111111"
                android:textDirection="ltr"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:background="@drawable/square_button_blue"
                android:fontFamily="serif"
...
