...
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/filterKeywordInput"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@android:color/transparent"
                android:fontFamily="serif"
                android:gravity="bottom|start"
                android:hint="@string/filter_keyword_hint"
...
                app:boxStrokeColor="#222222"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filterMinParticipantsInput"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="serif"
                    android:gravity="bottom|start"
                    android:hint="@string/filter_min_participants_hint"
...
                app:boxStrokeColor="#222222"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filterMaxParticipantsInput"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="serif"
                    android:gravity="bottom|start"
                    android:hint="@string/filter_max_participants_hint"
...
