...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/myThingsSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="Hello, NAME"
...
            android:textColor="#F4F1F1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/square_button_blue"
            android:fontFamily="serif"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
...
